# swift-build

./: .cirun.yml  .dockerignore  .gitignore  Darwin-arm64.cmake  Darwin-x86_64.cmake  Dockerfile  InstallSwiftToolchain.ps1  LICENSE  Makefile  README.md  Runtime-MacOSX-86_64.cmake  Runtime-MacOSX-arm64.cmake  SYMBOLS.md  Yams.yml  android-sdk-pipeline.yml  azure-pipelines.yml  build.cmd  build.ps1  build.sh  default.xml  package.cmd  pyproject.toml  requirements.txt  stable.xml  swift-argument-parser.yml  swift-atomcis.yml  swift-log.yml  swift-numerics.yml  swift-system.yml  tensorflow.xml  windows-sdk-pipeline.yml
.azure/: graphviz.yml  vs2022-swift-5.5.yml  vs2022-swift-5.6.yml  vs2022-swift-5.7.yml  vs2022-swift-5.8.yml  vs2022-swift-5.9.yml  vs2022.yml
.ci/: android-sdk-5.2.yml  android-sdk-deb.yml  android-sdk.yml  azure-pipelines-android-stdlib.yml  azure-pipelines-aws-agent.yml  curl-vs2019.yml  curl.yml  docker.yml  graphviz.yml  icu-deb.yml  icu-vs2019.yml  icu.yml  libxml2-vs2019.yml  libxml2.yml  linux-devtools  linux-devtools-deb.yml  linux-devtools.yml  linux-sdk-deb.yml  linux-sdk.yml  macOS-tensorflow.yml  macOS.yml  sqlite3-vs2019.yml  sqlite3.yml  stable-windows-toolchain-vs2019.yml  tensorflow.yml  toolchain-darwin-x64.yml  toolchain-linux-x64-deb.yml  toolchain-linux-x64.yml  toolchain-msi.yml  toolchain-vs2017-amd64-5.2.yml  toolchain-vs2017-amd64-facebook.yml  toolchain-vs2017-amd64.yml  toolchain-vs2019-amd64-5.2.yml  toolchain-vs2019-amd64-facebook.yml  toolchain-vs2019-amd64-msi.yml  toolchain-vs2019-amd64.yml  (+34 more)
cmake/SQLite/: CMakeLists.txt
(+199 files in other folders)
