# If you are making changes in this file you will likely want one of these commands to clear venv and rebuild it
# deactivate; uv cache clean; rm -rf .venv; uv sync; source .venv/bin/activate
# uv cache clean; rm -rf .venv; uv sync; source .venv/bin/activate

[project]
name = "swift-build"
version = "1.0.0"
description = "Python package to support the swift-build repository"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []
